--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <H1>Условия использования</H1>
 <H1>Лицензия Creative Commons Zero v1.0 Universal. <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.ru">Краткое описание лицензии.</a></H1>
-<H1>Автор статьи Бондарев Даниил</H1>
+<H1>Автор статьи Даниил</H1>
 <H1>Примерная дата выпуска: Январь 2024</H1>
 <a href="https://www.youtube.com/channel/UCAS-LSmebaAsnDyfE2BCknA">YouTube канал</a>
 </body>
